<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView3" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/button_website"
            android:drawableLeft="@drawable/ic_button_globe"
            android:drawableStart="@drawable/ic_button_globe"
            android:id="@+id/button_website"
            android:contentDescription="@string/access_desc_button_website"
            android:onClick="showWebsite" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/social"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/button_facebook"
                android:src="@drawable/ic_button_facebook"
                android:contentDescription="@string/access_desc_button_facebook"
                android:onClick="showFacebook"  />

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/button_youtube"
                android:src="@drawable/ic_button_youtube"
                android:contentDescription="@string/access_desc_button_youtube"
                android:onClick="showYouTube"  />

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/gPlusButton"
                android:src="@drawable/ic_button_gplus"
                android:contentDescription="@string/access_desc_button_gplus"
                android:onClick="showGPlus"  />

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/githubButton"
                android:src="@drawable/ic_button_github"
                android:contentDescription="@string/access_desc_button_github"
                android:onClick="showGitHub"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/first"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="US FIRST"
                android:id="@+id/button_usfirst"
                android:layout_weight="1"
                android:drawableLeft="@drawable/first_logo_notext"
                android:drawableStart="@drawable/first_logo_notext" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="FIRST WA"
                android:id="@+id/button_wafirst"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_button_wafirst"
                android:drawableEnd="@drawable/ic_button_wafirst" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="Calendar"
            android:id="@+id/button_cal"
            android:drawableLeft="@drawable/ic_button_cal"
            android:drawableStart="@drawable/ic_button_cal"
            android:enabled="false"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/timer_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="21:21:21:21"
                android:id="@+id/timer"
                android:textSize="45sp"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center"
                android:onClick="expandTimer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown.event.name"
                android:id="@+id/event"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/layout_livestream">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    android:text="@string/countdown.event.link"
                    android:id="@+id/button_livestream"
                    android:drawableLeft="@drawable/first_logo_notext"
                    android:drawableStart="@drawable/first_logo_notext"
                    android:visibility="visible"
                    android:onClick="showLivestream"
                    android:layout_weight="1"
                    android:enabled="false"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:id="@+id/navigate"
                    android:src="@drawable/maps"
                    android:onClick="navigateToEvent"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/button_sponsors"
            android:id="@+id/button_sponsors"
            android:onClick="showSponsors"
            android:drawableLeft="@drawable/ic_button_sponsors"
            android:drawableStart="@drawable/ic_button_sponsors" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/button_about"
            android:drawableLeft="@drawable/ic_button_about"
            android:drawableStart="@drawable/ic_button_about"
            android:id="@+id/button_about"
            android:contentDescription="@string/access_desc_button_about"
            android:onClick="showAbout" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/next_event"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/textView6"
                    android:textSize="112sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Days Until Next Meeting"
                    android:id="@+id/next_event_name"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7-9 PM, D123"
                    android:id="@+id/textView7"/>
            </LinearLayout>
            </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
